# cotacao

./: README.md  pyproject.toml
config/: settings.py  urls.py
core/: filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
core/management/commands/: buscar_cotacoes.py
core/migrations/: 0001_initial.py
core/static/core/js/: dashboard.js
core/templates/core/: index.html
